Style fix: footer links centered on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,6 +250,11 @@ hr {
   justify-content: center;
 }
 
+.footer-link {
+ display: flex;
+ justify-content: center;
+}
+
 .footer-social-meida-icons {
   font-size: 3em;
 }
